--- a/package.json
+++ b/package.json
@@ -6,33 +6,38 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "vue-cli-service test:unit --watch"
+    "test": "vue-cli-service test:unit --watch",
+    "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.5.5",
-    "vuex": "^3.0.1"
+    "axios": "^0.18.1",
+    "core-js": "^2.6.11",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vuetify": "^1.5.24",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-plugin-unit-jest": "^3.5.3",
-    "@vue/cli-service": "^3.5.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.2.3",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "stylus": "^0.54.5",
+    "eslint-plugin-vue": "^5.2.3",
+    "minimist": "^1.2.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3"
+  },
+  "resolutions": {
+    "minimist": "^1.2.5"
   }
 }
