--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "resolutions": {
     "minimist": "^1.2.5",
     "acorn": "^7.0.0",
-    "kind-of": "^6.0.3"
+    "kind-of": "^6.0.3",
+    "serialize-javascript": "^3.1.0",
+    "yargs-parser": "^18.1.3"
   }
 }
